--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bit_seven
+name: sevenbit
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.2 <3.0.0'
+  sdk: '>=2.19.4 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flukit: ^3.0.1 #ui库
   get: ^4.6.5
-  
+ 
   image_editor: ^1.3.0                 #图片编辑
   file_picker: ^5.2.5 #文件选择
   image_picker: ^0.8.6+4 #图片选择
@@ -54,11 +54,17 @@ dependencies:
   http: ^0.13.5 #网络请求
   #smooth_page_indicator: ^1.0.1 #页面指示器
   #shared_preferences: ^2.0.18
-  extended_image: ^7.0.2 #图片裁剪
+  #
   image: any
   image_gallery_saver: ^1.7.1
   path_provider: ^2.0.13
-
+  animations: ^2.0.7 #页面切换动画
+  loading_animation_widget: ^1.2.0+4 #加载控件
+  #easy_refresh: ^3.3.1 #刷新 bug
+  liquid_pull_to_refresh: ^3.0.1 #刷新组件
+  palette_generator: ^0.3.3+2 #获取图片主体色
+  # color_thief_flutter: ^1.0.2
+  extended_image: ^7.0.1 #图片裁剪
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -71,7 +77,6 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3               #JSON
   json_serializable: ^6.6.1          #JSON
-  #flutter_launcher_icons: "^0.11.0"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -108,6 +113,7 @@ flutter:
     - assets/svg/dots-vertical.svg
     - assets/svg/mail.svg
     - assets/svg/trash.svg  
+    - assets/svg/005.svg
     #webp
     - assets/images/user.webp
     #jpg
